# mcp-xray

./: .env.template  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: README.md  behavioral-probe.md  consolidation-probe.md  grading.md  merge-candidates.md  safe-calls.md  static-hygiene-probe.md
examples/: call-manifest.yaml  golden.yaml
examples/reports/: README.md  orionbelt-analytics-v1.5.2.md  orionbelt-semantic-layer-v2.8.4.md
src/mcp_xray/: __init__.py  chat.py  cli.py  connect.py  counting.py  finding.py  grade.py  inventory.py  orchestrator.py  phases.py  pricing.py  report.py  validate.py  vendors.py
src/mcp_xray/probes/: __init__.py  base.py  consolidate.py  noise.py  static_hygiene.py
src/mcp_xray/probes/token_tax/: __init__.py  base_adapter.py  mcp_checkup.py  token_analyzer.py
tests/: conftest.py  test_capture.py  test_cli.py  test_consolidate.py  test_grade_report.py  test_inventory.py  test_noise.py  test_phases.py  test_pricing.py  test_static.py  test_validate.py  test_vendors.py
tests/contracts/: test_mcp_checkup.py  test_token_analyzer.py
tests/contracts/fixtures/: mcp_checkup_sample.json  token_analyzer_sample.json
tests/fixtures/: bloated.json  clean.json  crud_heavy.json  overlapping.json
tests/fixtures/phases/: active.json  phases.yaml  setup.json
